--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "My YT Bookmarks",
+    "name": "PersonaLearn",
     "version": "0.1.0",
-    "description": "Saving timestamps in YT videos",
+    "description": "A personalized education recommendation platform.",
     "permissions": ["storage", "tabs"],
     "host_permissions": ["https://*.youtube.com/*"],
     "background": {
@@ -30,7 +30,7 @@
         "24": "assets/ext-icon.png",
         "32": "assets/ext-icon.png"
       },
-      "default_title": "My YT Bookmarks",
+      "default_title": "PersonaLearn",
       "default_popup": "popup.html"
     },
     "manifest_version": 3
