--- a/hackmitflaskbackend/requirements.txt
+++ b/hackmitflaskbackend/requirements.txt
@@ -1,9 +1,16 @@
+cachetools==5.2.0
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
 et-xmlfile==1.1.0
 Flask==2.2.2
+google-api-core==2.10.1
+google-api-python-client==2.63.0
+google-auth==2.12.0
+google-auth-httplib2==0.1.0
+googleapis-common-protos==1.56.4
 gunicorn==20.1.0
+httplib2==0.20.4
 idna==3.4
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
@@ -14,14 +21,20 @@ openai==0.23.1
 openpyxl==3.0.10
 pandas==1.5.0
 pandas-stubs==1.5.0.220926
+protobuf==4.21.7
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.4
 requests==2.28.1
+rsa==4.9
 six==1.16.0
 tqdm==4.64.1
 types-pytz==2022.2.1.0
 typing_extensions==4.3.0
+uritemplate==4.1.1
 urllib3==1.26.12
 Werkzeug==2.2.2
 youtube-transcript-api==0.4.4
